--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -40,4 +40,6 @@ jobs:
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
           git tag $NEW_VERSION
+          
+          # Explicitly use the Personal Access Token (PAT) for authentication
           git push https://x-access-token:$GH_PAT@github.com/${{ github.repository }}.git $NEW_VERSION
