--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -3,7 +3,7 @@ name: Auto Versioning
 on:
   push:
     branches:
-      - ConvertToRuby
+      - version-workflow  # Trigger only on this branch
 
 jobs:
   version:
@@ -40,6 +40,6 @@ jobs:
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
           git tag $NEW_VERSION
-          
-          # Explicitly use the Personal Access Token (PAT) for authentication
+
+          # Use Personal Access Token (PAT) to push the tag
           git push https://x-access-token:$GH_PAT@github.com/${{ github.repository }}.git $NEW_VERSION
