--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -35,12 +35,13 @@ jobs:
 
       - name: Push New Tag
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Use GitHub's automatic token
+          GH_PAT: ${{ secrets.GH_PAT }}  # Use the PAT secret for authentication
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
           git tag $NEW_VERSION
 
-          # Use the GitHub token for authentication
-          git push https://x-access-token:$GITHUB_TOKEN@github.com/${{ github.repository }}.git $NEW_VERSION
+          # Use the PAT for authentication when pushing the tag
+          git push https://x-access-token:$GH_PAT@github.com/${{ github.repository }}.git $NEW_VERSION
+      
       
