--- a/.github/workflows/Testing.yml
+++ b/.github/workflows/Testing.yml
@@ -35,6 +35,8 @@ jobs:
           sudo systemctl enable docker
 
       - name: Set up Docker Compose
+        env:
+          DOCKER_COMPOSE_VERSION: 1.29.2
         run: |
           curl -L https://github.com/docker/compose/releases/download/v$DOCKER_COMPOSE_VERSION/docker-compose-$(uname -s)-$(uname -m) -o /usr/local/bin/docker-compose
           sudo chmod +x /usr/local/bin/docker-compose
