--- a/.github/workflows/Testing.yml
+++ b/.github/workflows/Testing.yml
@@ -34,14 +34,17 @@ jobs:
           sudo systemctl start docker
           sudo systemctl enable docker
 
-      - name: Set up Docker Compose
-        env:
-          DOCKER_COMPOSE_VERSION: 1.29.2
+      - name: Get latest Docker Compose version
+        id: compose_version
         run: |
-          curl -L https://github.com/docker/compose/releases/download/v$DOCKER_COMPOSE_VERSION/docker-compose-$(uname -s)-$(uname -m) -o /usr/local/bin/docker-compose
+         echo "version=$(curl -s https://api.github.com/repos/docker/compose/releases/latest | jq -r .tag_name | sed 's/v//')" >> $GITHUB_OUTPUT
+
+      - name: Set up Docker Compose
+        run: |
+          curl -L https://github.com/docker/compose/releases/download/v${{ steps.compose_version.outputs.version }}/docker-compose-$(uname -s)-$(uname -m) -o /usr/local/bin/docker-compose
           sudo chmod +x /usr/local/bin/docker-compose
           docker-compose --version
-      
+
       - name: Build and start services with Docker Compose
         run: |
           docker-compose up -d  # Start services in detached mode
