--- a/.github/workflows/Testing.yml
+++ b/.github/workflows/Testing.yml
@@ -48,7 +48,7 @@ jobs:
 
       - name: Build and start services with Docker Compose
         run: |
-          docker-compose up -d  # Start services in detached mode
+          docker compose up --build
 
       - name: Run tests with rspec
         run: |
