--- a/.github/workflows/Testing.yml
+++ b/.github/workflows/Testing.yml
@@ -48,7 +48,7 @@ jobs:
 
       - name: Build and start services with Docker Compose
         run: |
-          docker compose up --build
+          docker compose up -d
 
       - name: Run tests with rspec
         run: |
