--- a/.github/workflows/Testing.yml
+++ b/.github/workflows/Testing.yml
@@ -31,7 +31,7 @@ jobs:
           curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo tee /etc/apt/trusted.gpg.d/docker.asc
           sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
           sudo apt-get update
-          sudo apt-get install -y docker-ce docker-ce-cli containerd.io
+          sudo apt-get install -y ruby-full docker-ce docker-ce-cli containerd.io
           sudo systemctl start docker
           sudo systemctl enable docker
 
