--- a/.github/workflows/Testing.yml
+++ b/.github/workflows/Testing.yml
@@ -20,6 +20,21 @@ jobs:
           sudo apt-get autoremove -y
           sudo apt-get clean
 
+      - name: Install Docker
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            apt-transport-https \
+            ca-certificates \
+            curl \
+            software-properties-common
+          curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo tee /etc/apt/trusted.gpg.d/docker.asc
+          sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
+          sudo apt-get update
+          sudo apt-get install -y docker-ce docker-ce-cli containerd.io
+          sudo systemctl start docker
+          sudo systemctl enable docker
+
       - name: Get latest Docker Compose version
         id: compose_version
         run: |
