--- a/.github/workflows/Dawnscanner.yml
+++ b/.github/workflows/Dawnscanner.yml
@@ -43,7 +43,8 @@ jobs:
 
           # Run the scan
           ls -l
-          dawn scan .
+          dawn scan ../.
+
 
           echo "----------------------------------- Scan Summary Output"
           cat /home/runner/dawnscanner/results/$(date +%Y%m%d)/summary.txt
