test-app workflow

--- a/.github/workflows/DockerHub.yml
+++ b/.github/workflows/DockerHub.yml
@@ -27,7 +27,7 @@ jobs:
           docker push ${{ vars.DOCKER_USERNAME }}/minitwit-db:latest
           docker push ${{ vars.DOCKER_USERNAME }}/minitwit-webapp:latest
 
-      - name: SSH into Server and Pull Latest Image
+      - name: SSH into DB-test-server and Pull Latest Image
         uses: appleboy/ssh-action@v0.1.10
         with:
           host: ${{ vars.TEST_DB }}
@@ -38,6 +38,22 @@ jobs:
             docker rm $(docker ps -aq) 
             docker pull ${{ vars.DOCKER_USERNAME }}/minitwit-db:latest
             docker run -d -p "${{ vars.POSTGRES_PORT}}:${{ vars.POSTGRES_PORT}}" -e "POSTGRES_USER=${{vars.DB_USER}}" -e "POSTGRES_PASSWORD=${{secrets.DB_PASSWORD}}" -e "POSTGRES_DB=${{vars.DB_NAME}}" "${{ vars.DOCKER_USERNAME }}/minitwit-db:latest"
+
+      - name: SSH into app-test-server and Pull Latest Image
+        uses: appleboy/ssh-action@v0.1.10
+        with:
+          host: ${{ vars.TEST_WEB }}
+          username: root
+          key: ${{ secrets.SSH_KEY_PRIVATE }}
+          script: |
+            docker stop $(docker ps -aq) 
+            docker rm $(docker ps -aq) 
+            docker pull ${{ vars.DOCKER_USERNAME }}/minitwit-db:latest
+            docker run -d -p "${{ vars.EXPOSED_PORT}}:${{ vars.TEST_PORT}}" -e "db_IP=${{vars.db_IP}}" -e "db_password=${{secrets.DB_PASSWORD}}" -e "db_name=${{vars.DB_NAME}}" "${{ vars.DOCKER_USERNAME }}/minitwit-db:latest"
+      : db
+      db_password: knowledge
+      : minitwit_db
+ 
 
       - name: Test Deployment
         run: |
