fixed workflow error

--- a/.github/workflows/DockerHub.yml
+++ b/.github/workflows/DockerHub.yml
@@ -48,8 +48,8 @@ jobs:
           script: |
             docker stop $(docker ps -aq) 
             docker rm $(docker ps -aq) 
-            docker pull ${{ vars.DOCKER_USERNAME }}/minitwit-db:latest
-            docker run -d -p "${{ vars.EXPOSED_PORT}}:${{ vars.TEST_PORT}}" -e "db_IP=${{vars.TEST_DB}}" -e "db_password=${{secrets.DB_PASSWORD}}" -e "db_name=${{vars.DB_NAME}}" "${{ vars.DOCKER_USERNAME }}/minitwit-db:latest"
+            docker pull ${{ vars.DOCKER_USERNAME }}/minitwit-webapp:latest
+            docker run -d -p "${{ vars.EXPOSED_PORT}}:${{ vars.TEST_PORT}}" -e "db_IP=${{vars.TEST_DB}}" -e "db_password=${{secrets.DB_PASSWORD}}" -e "db_name=${{vars.DB_NAME}}" "${{ vars.DOCKER_USERNAME }}/minitwit-webapp:latest"
 
       - name: Test Deployment
         run: |
