--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -9,19 +9,20 @@ on:
 jobs:
   build-pdf:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v3
 
       - name: Compile LaTeX report
         uses: xu-cheng/latex-action@v3
         with:
-          root_file: BSc_group_p.tex
-          working_directory: report
-          work_in_root_file_dir: true
+          root_file: BSc_group_p.tex      # main entry point
+          working_directory: report       # where the sources live
+          work_in_root_file_dir: true      # cd into report/
           args: -pdf -file-line-error -halt-on-error -interaction=nonstopmode -output-directory=build
 
       - name: Upload PDF artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: DevOpsReport
           path: report/build/BSc_group_p.pdf
