--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -2,33 +2,47 @@ name: Build LaTeX Report
 
 on:
   push:
-    paths:
-      - 'report/**'
+    paths: ['report/**']
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
-  build-pdf:
+  build:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
+        with: {fetch-depth: 0}
 
-      - name: Compile LaTeX report
-        uses: xu-cheng/latex-action@v3
-        with:
-          root_file: BSc_group_p.tex      # main entry point
-          working_directory: report       # where the sources live
-          work_in_root_file_dir: true      # cd into report/
-          args: -pdf -file-line-error -halt-on-error -interaction=nonstopmode -output-directory=build
+      - name: Install TeX Live + latexmk
+        run: |
+          sudo apt-get update -y
+          sudo apt-get install -y texlive-latex-base latexmk
 
-      - name: Upload PDF artifact
-        uses: actions/upload-artifact@v4
+      - name: Compile LaTeX to PDF
+        run: |
+          cd report
+          mkdir -p build
+          latexmk -pdf -interaction=nonstopmode -halt-on-error \
+                  -file-line-error -output-directory=build \
+                  BSc_group_p.tex     # ← or main.tex
+
+      - name: Commit PDF
+        run: |
+          git config user.name  "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add report/build/BSc_group_p.pdf
+          # only commit if there are changes
+          if ! git diff --cached --quiet; then
+            git commit -m "CI: render report [skip ci]"
+            git push
+          else
+            echo "PDF unchanged – nothing to commit."
+          fi
+
+      - uses: actions/upload-artifact@v4
         with:
           name: DevOpsReport
           path: report/build/BSc_group_p.pdf
-
-      - name: Commit built PDF
-        uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          commit_message: "CI: update rendered report [skip ci]"
-          file_pattern: report/build/*.pdf
