--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -33,7 +33,7 @@ jobs:
         run: |
           git config user.name  "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add report/build/BSc_group_p.pdf
+          git add -f report/build/BSc_group_p.pdf
           # only commit if there are changes
           if ! git diff --cached --quiet; then
             git commit -m "CI: render report [skip ci]"
