--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 # vagrant
 .vagrant/
 
+Gemfile.lock
+.DS_Store
 
 ### JetBrains ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
