--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           cd report
           mkdir -p build
-          latexmk -pdf -interaction=nonstopmode -halt-on-error \
+          latexmk -pdf -f -interaction=nonstopmode \
                   -file-line-error -output-directory=build \
                   BSc_group_p.tex     # ← or main.tex
 
